--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 button{
     padding: 1.3em 3em;
     font-size: 12px;
@@ -20,12 +25,25 @@ button{
     margin:10px;    
 }
 
+button:hover {
+    transform: scale(1.1);
+}
+
+.nav-bar {
+    position: sticky; /* or absolute */
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
+
 .logo img {
     width: 160px;
     height: 60px;
 }
 
-ul li {
+.nav-bar-ul li {
     display: inline-block;
     padding: 18px;
     font-size: 18px;
@@ -34,7 +52,7 @@ ul li {
     color: black;
 }
 
-ul li :hover {
+.nav-bar-ul li :hover {
     padding: 10px;
     border-top: 5px solid #4285f4;
     border-radius: 4px;
@@ -46,16 +64,16 @@ a {
     color: black;
 }
 
-.nav-bar-links {
-    /* display: grid;
-    grid-template-columns: 1fr; */
-}
+/* .nav-bar-links {
+    display: grid;
+    grid-template-columns: 1fr;
+} */
 
 .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    /* padding: 10px; */
     /* margin: 20px; */
 }
 
@@ -108,13 +126,13 @@ a {
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   gap: 20px; 
-   margin-top: 15px;
+   box-shadow: 0 1px 2px 0 rgba(0,0,0,.1);
+   padding: 30px;
 }
 
 .header-container {
     padding: 20px;
-    width: fit-content;
+    margin-bottom: 30px;
     /* box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; */
 }
 
@@ -124,39 +142,55 @@ a {
     color: black;
     font-size: 35px;
     padding: 10px;
+    text-align: center;
 }
 
-.text-container {
+.overview-text-container {
     padding: 26px;
 }
 
 .overview-text {
     font-size: 20px;
+    text-align: center;
 }
 
 .services-grid {
     display: grid;
-    grid-template-columns: repeat(2, 40%);
+    grid-template-columns: repeat(2, 45%);
     /* grid-auto-rows: ; */
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     gap: 50px;
+}
+
+.element-animation {
+    visibility: visible;
+    animation-duration: 3s;
+    animation-delay: 0.5s;
+    animation-name: slideInleft;
+}
+
+@keyframes slideInleft {
+    0% {transform: translate3d(-100%,0,0);
+        visibility: hidden;
+    }
+    100% {transform: translate3d(0,0,0);}
 }
 
 .card {
     width: 100%;
-    height: 600px;
+    height: 650px;
     border-radius: 20px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: column;
 }
 
 .card img {
-    width: 90%;
+    width: 70%;
     height: auto;
     padding-bottom: 20px;
 }
@@ -164,6 +198,7 @@ a {
 .card p {
     line-height: 28px;
     padding: 20px;
+    font-size: 16px;
 }
 
 .slider-grid {
@@ -182,12 +217,12 @@ a {
     display: grid;
     grid-template-columns: repeat(4,1fr);
     align-items: center;
-    justify-content: center;
+    justify-items: center;
 }
 
 .model-box {   
     width: 90%;
-    height: 400px;
+    height: 500px;
     border-radius: 20px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 20px;
@@ -206,7 +241,7 @@ a {
     display: grid;
     grid-template-columns: repeat(6,1fr);
     align-items: center;
-    justify-content: center;  
+    /* justify-items: center; */
 }
 
 .technology-box {
@@ -246,6 +281,7 @@ a {
     padding: 20px;
     font-weight: bolder;
     letter-spacing: 3px;
+    text-align: center;
 }
 
 .discuss-header h3 {
@@ -258,3 +294,44 @@ a {
     background-color: #fff;
     color: black;
 }
+
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color:rgba(33,33,33,0.92);
+    color: white;
+    padding: 30px 0;
+}
+
+.footer-nav-bar-links ul{
+    line-height: 2;
+    padding: 24px;
+    font-weight: 600;
+    margin-left: 60px;
+}
+
+.footer-nav-bar-links ul li a{
+    color: white;
+}
+
+.footer-contact {
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+    row-gap: 10px;
+}
+
+.footer-contact p {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+.contact-links a{
+    color: white;
+    padding-right:10px;
+}
+
