--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,7 +9,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-button{
+button {
     padding: 1.3em 3em;
     font-size: 12px;
     letter-spacing: 2.5px;
@@ -22,7 +22,7 @@ button{
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    margin:10px;    
+    margin: 10px;
 }
 
 button:hover {
@@ -30,13 +30,14 @@ button:hover {
 }
 
 .nav-bar {
-    position: sticky; /* or absolute */
+    position: sticky;
+    /* or absolute */
     top: 0;
     left: 0;
     right: 0;
     background-color: white;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
-  }
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+}
 
 .logo img {
     width: 160px;
@@ -87,14 +88,14 @@ a {
     background-color: black;
 }
 
-.home-text h1{
+.home-text h1 {
     color: #547dbf;
     padding: 10px;
     font-size: 35px;
     font-weight: bolder;
 }
 
-.home-text h2{
+.home-text h2 {
     color: #fff;
     padding: 10px;
     font-size: 30px;
@@ -118,16 +119,16 @@ a {
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    margin:10px;
+    margin: 10px;
 }
 
 .box {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   box-shadow: 0 1px 2px 0 rgba(0,0,0,.1);
-   padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
+    padding: 30px;
 }
 
 .header-container {
@@ -170,10 +171,14 @@ a {
 }
 
 @keyframes slideInleft {
-    0% {transform: translate3d(-100%,0,0);
+    0% {
+        transform: translate3d(-100%, 0, 0);
         visibility: hidden;
     }
-    100% {transform: translate3d(0,0,0);}
+
+    100% {
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .card {
@@ -203,7 +208,7 @@ a {
 .slider-grid {
     display: flex;
     flex-direction: row;
-    align-items:baseline;
+    align-items: baseline;
     justify-content: space-between;
     padding: 30px;
 }
@@ -214,12 +219,12 @@ a {
 
 .model-grid {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     align-items: center;
     justify-items: center;
 }
 
-.model-box {   
+.model-box {
     width: 90%;
     height: 500px;
     border-radius: 20px;
@@ -228,17 +233,21 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .model-box img {
     width: 90%;
-    height: auto;   
+    height: auto;
+}
+
+.model-box p {
+    text-align: justify;
 }
 
 .technology-grid {
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
     align-items: center;
     /* justify-items: center; */
 }
@@ -248,7 +257,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column; 
+    flex-direction: column;
     margin: 20px;
 }
 
@@ -259,7 +268,7 @@ a {
 
 .technology-box:hover {
     border-radius: 20px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;   
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .discuss-container {
@@ -302,26 +311,26 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color:rgba(33,33,33,0.92);
+    background-color: rgba(33, 33, 33, 0.92);
     color: white;
     padding: 30px 0;
 }
 
-.footer-nav-bar-links ul{
+.footer-nav-bar-links ul {
     line-height: 2;
     padding: 24px;
     font-weight: 600;
     margin-left: 60px;
 }
 
-.footer-nav-bar-links ul li a{
+.footer-nav-bar-links ul li a {
     color: white;
 }
 
 .footer-contact {
     display: flex;
     flex-direction: column;
-    align-items:stretch;
+    align-items: stretch;
     row-gap: 10px;
 }
 
@@ -331,8 +340,7 @@ footer {
     margin-bottom: 8px;
 }
 
-.contact-links a{
+.contact-links a {
     color: white;
-    padding-right:10px;
+    padding-right: 10px;
 }
-
