--- a/styles/careers.css
+++ b/styles/careers.css
@@ -64,7 +64,7 @@ a {
 }
 
 
-.teams-img-container img {
+.career-img-container img {
     height: 240px;
     width: 100%;
 }
@@ -83,140 +83,121 @@ a {
     margin: 8px 0;
 }
 
-.overview-container {
-    padding: 24px;
+
+.resume-btn-box {
+    width: 70vw;
+    display: flex;
+    justify-content: flex-end;
 }
 
-.box {
+button {
+    padding: 1.3em 3em;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #4285f4;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.102);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    margin: 30px;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
+.job-post-section{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.job-post-conatiner {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
     justify-content: center;
-    padding: 30px;
-    border: 1px solid whitesmoke;
-}
-
-.overview-text-container {
-    padding: 16px;
-}
-
-.overview-text {
-    font-size: 20px;
-    text-align: center;
-    padding: 0 20px;
-}
-
-.model-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-items: center;
-    justify-items: center;
-    padding: 30px;
-}
-
-.model-box {
-    width: 90%;
-    height: 600px;
-    border-radius: 20px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-}
-
-.model-box img {
-    width: 70%;
-    height: fit-content;
-    padding: 10px;
-    margin: 10px;
-}
-
-.model-box h3 {
-    text-align: center;
-    padding: 10px;
-}
-
-.model-box p {
-    text-align: justify;
-}
-
-section h2 {
-    text-align: center;
-    padding: 20px;
-}
-
-.team-engagement-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: stretch;
-    justify-items: center;
-}
-
-.team-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    border: 1px solid whitesmoke;
-    background-color: #ddd;
-}
-
-.team-card img {
-    width: 100%;
-    padding: 10px;
-    margin: 20px;
-}
-
-.team-card p {
-    line-height: 28px;
-    padding: 20px;
-    text-align: justify;
-}
-
-.red-text {
-    color: red;
-}
-
-.testimonials {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    padding: 30px;
-}
-
-figure {
-    display: flex;
-    flex-direction: row;
     gap: 10px;
+    border: 1px solid rgb(83, 83, 83);
+    width: 70%;
+}
+
+.job-list{
+    padding: 10px 40px;
+    border-bottom:1px solid rgb(84, 84, 84);
+    align-self: stretch;
+    justify-self: center;
+}
+                        
+.job-list a{
+    color: rgb(81, 81, 234);
+    font-weight: 600;
+}
+
+
+
+ /* FORM SECTION */
+
+.form-section{
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: flex-start;
-    padding: 20px;
-    margin: 20px;
+    gap: 15px;
 }
 
-figure img {
-    width: 30%;
+form {
+    padding: 35px 30px;
+    box-shadow: 0 10px 8px rgba(0,0,0,0.19),
+                0 6px  12px rgba(7,6,6,0.23);
+    width: 500px;
+    height: 400px;
 }
 
-blockquote {
-    text-align: justify;
-    padding-right: 16px;
-    padding-bottom: 16px;
+.input-section {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    padding: 30px;
 }
 
-figure:hover {
-    border-radius: 20px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+input{
+    width: 350px;
 }
 
-figcaption h4 {
-    text-align: center;
+input:focus{
+    outline: none;
+    box-shadow: 5px 4px rgba(3, 143, 236, a0.19);
 }
+
+input:focus:invalid{
+    border: 2px solid rgb(255,69,100);
+}
+
+input:focus:valid {
+    border: 2px solid rgb(0,183,255);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ---FOOTER---- */
 
@@ -258,3 +239,4 @@ footer {
     color: white;
     padding-right: 10px;
 }
+
