--- a/styles/services.css
+++ b/styles/services.css
@@ -9,6 +9,11 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
+.container {
+    width: 100vw;
+    min-height: 100vh;
+}
+
 button {
     padding: 1.3em 3em;
     font-size: 12px;
