--- a/styles/about.css
+++ b/styles/about.css
@@ -10,8 +10,8 @@ body {
 }
 
 .container {
-    width: 100vw;
-    min-height: 100vh;
+    max-width:100vw;
+    max-height:100vh;
 }
 
 .nav-bar {
@@ -30,8 +30,8 @@ body {
 }
 
 .logo img {
-    width: 160px;
-    height: 60px;
+    max-width: 160px;
+    max-height: auto;
 }
 
 .nav-bar-ul li {
@@ -56,7 +56,7 @@ a {
 }
 
 .about-img-container img {
-    width: 100%;
+    max-width: 100%;
 }
 
 .header-container {
@@ -91,16 +91,18 @@ a {
 }
 
 .about-main-text {
-    text-align: center;
+    text-align: justify;
 }
 
 .about-main-text h2 {
     padding-bottom: 25px;
+    text-align: center;
 }
 
 .about-main-image {
-    width: 400px;
-    height: 300px;
+    max-width: 300px;
+    /* height: 300px; */
+    object-fit: contain;
 }
 
 .service-value-grid {
@@ -120,7 +122,8 @@ a {
 }
 
 .service-value-box img {
-    width: 30%;
+    max-width:100px;
+    /* object-fit: contain; */
 }
 
 .engagement-model-container {
@@ -130,8 +133,8 @@ a {
 }
 
 .engagement-model-image {
-    width: 400px;
-    height: 250px;
+    max-width: 400px;
+    /* height: 250px; */
 }
 
 .engagement-model-box {
@@ -145,7 +148,7 @@ a {
 }
 
 .engagement-model-text {
-    text-align: center;
+    text-align: justify;
 }
 
 
