--- a/styles/careers.css
+++ b/styles/careers.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 }
 
@@ -25,8 +25,8 @@ body {
 }
 
 .logo img {
-    width: 160px;
-    height: 60px;
+    max-width: 160px;
+    max-height: auto;
 }
 
 .nav-bar-ul li {
@@ -65,8 +65,9 @@ a {
 
 
 .career-img-container img {
-    height: 240px;
+    max-height: 240px;
     width: 100%;
+    object-fit: cover;
 }
 
 .header-container {
@@ -85,9 +86,11 @@ a {
 
 
 .resume-btn-box {
-    width: 70vw;
+    /* width: 70vw; */
     display: flex;
     justify-content: flex-end;
+    margin-left: auto;
+    margin-right: 200px;
 }
 
 button {
@@ -124,6 +127,7 @@ button:hover {
     gap: 10px;
     border: 1px solid rgb(83, 83, 83);
     width: 70%;
+    margin-bottom: 50px;
 }
 
 .job-list{
@@ -142,62 +146,49 @@ button:hover {
 
  /* FORM SECTION */
 
-.form-section{
-    visibility: hidden;
+ .form-section{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 15px;
 }
 
-form {
-    padding: 35px 30px;
-    box-shadow: 0 10px 8px rgba(0,0,0,0.19),
-                0 6px  12px rgba(7,6,6,0.23);
-    width: 500px;
-    height: 400px;
-}
+ form{
+    max-width: fit-content;
+    max-height: 450px;
+    padding: 15px;
+    box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
+ }
 
-.input-section {
+ .input-section {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    gap: 20px;
-    padding: 30px;
+ }
+
+ input[type="text"],
+ input[type="email"],
+ select,
+ textarea {
+   font: 1.25rem / 1.5 sans-serif;
+   display: block;
+   width: 100%;
+   padding: 0.12em 0.12em;
+ }
+
+ label {
+    padding: 6px;
+ }
+
+ .submit-section{
+    max-width: fit-content;
 }
 
-input{
-    width: 350px;
+.submit-section button {
+    margin: 10px;
 }
 
-input:focus{
-    outline: none;
-    box-shadow: 5px 4px rgba(3, 143, 236, a0.19);
+.close-form{
+    background-color: red;
 }
-
-input:focus:invalid{
-    border: 2px solid rgb(255,69,100);
-}
-
-input:focus:valid {
-    border: 2px solid rgb(0,183,255);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ---FOOTER---- */
 
