--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 }
 
@@ -25,8 +25,8 @@ body {
 }
 
 .logo img {
-    width: 160px;
-    height: 60px;
+    max-width: 160px;
+    max-height: auto;
 }
 
 .nav-bar-ul li {
@@ -50,6 +50,7 @@ a {
     color: black;
 }
 
+
 /* .nav-bar-links {
     display: grid;
     grid-template-columns: 1fr;
@@ -65,8 +66,9 @@ a {
 
 
 .contact-img-container img {
-    height: 240px;
-    width: 100vw;
+    max-height: 240px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .header-container {
@@ -83,12 +85,6 @@ a {
     margin: 8px 0;
 }
 
-
-.resume-btn-box {
-    width: 70vw;
-    display: flex;
-    justify-content: flex-end;
-}
 
 button {
     padding: 1.3em 3em;
@@ -111,68 +107,65 @@ button:hover {
 }
 
 
-
-
- /* FORM SECTION */
-
- .form-section{
-    visibility: hidden;
+.contact-map-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-}
-
-form {
-    padding: 35px 30px;
-    box-shadow: 0 10px 8px rgba(0,0,0,0.19),
-                0 6px  12px rgba(7,6,6,0.23);
-    width: 500px;
-    height: 400px;
-}
-
-.input-section {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
     gap: 20px;
-    padding: 30px;
-}
-
-input{
-    width: 350px;
-}
-
-input:focus{
-    outline: none;
-    box-shadow: 5px 4px rgba(3, 143, 236, a0.19);
-}
-
-input:focus:invalid{
-    border: 2px solid rgb(255,69,100);
-}
-
-input:focus:valid {
-    border: 2px solid rgb(0,183,255);
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px 10px 30px 10px;
 }
 
 
 .map-section {
     padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 
+ /* FORM SECTION */
 
+ .form-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+ form{
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
+ }
 
+ .input-section {
+    display: flex;
+    flex-direction: column;
+ }
 
+ input[type="text"],
+ input[type="email"],
+ select,
+ textarea {
+   font: 1.25rem / 1.5 sans-serif;
+   display: block;
+   width: 100%;
+   padding: 0.12em 0.12em;
+ }
 
+ label {
+    padding: 6px;
+ }
 
+ .submit-section{
+    width: fit-content;
+}
 
+.submit-section button {
+    margin: 10px;
+}
+
+.close-form{
+    background-color: red;
+}
 
 
 
@@ -217,6 +210,3 @@ footer {
     color: white;
     padding-right: 10px;
 }
-
-
-
