--- a/styles/ourTeam.css
+++ b/styles/ourTeam.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 }
 
@@ -25,8 +25,8 @@ body {
 }
 
 .logo img {
-    width: 160px;
-    height: 60px;
+    max-width: 160px;
+    max-height: auto;
 }
 
 .nav-bar-ul li {
@@ -65,8 +65,9 @@ a {
 
 
 .teams-img-container img {
-    height: 240px;
+    max-height: 240px;
     width: 100%;
+    object-fit: cover;
 }
 
 .header-container {
@@ -127,7 +128,7 @@ a {
 }
 
 .model-box img {
-    width: 70%;
+    max-width: 70%;
     height: fit-content;
     padding: 10px;
     margin: 10px;
@@ -165,7 +166,7 @@ section h2 {
 }
 
 .team-card img {
-    width: 100%;
+    max-width: 100%;
     padding: 10px;
     margin: 20px;
 }
@@ -200,7 +201,7 @@ figure {
 }
 
 figure img {
-    width: 30%;
+    max-width: 30%;
 }
 
 blockquote {
