--- a/styles/careers.css
+++ b/styles/careers.css
@@ -1,68 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.container {
-    max-width: 100vw;
-    min-height: 100vh;
-}
-
-.nav-bar {
-    position: sticky;
-    /* or absolute */
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: white;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
-}
-
-.logo img {
-    max-width: 160px;
-    max-height: auto;
-}
-
-.nav-bar-ul li {
-    display: inline-block;
-    padding: 18px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 40px;
-    color: black;
-}
-
-.nav-bar-ul li :hover {
-    padding: 10px;
-    border-top: 5px solid #4285f4;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-/* .nav-bar-links {
-    display: grid;
-    grid-template-columns: 1fr;
-} */
-
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* padding: 10px; */
-    /* margin: 20px; */
-}
-
 
 .career-img-container img {
     max-height: 240px;
@@ -86,52 +21,29 @@ a {
 
 
 .resume-btn-box {
-    /* width: 70vw; */
-    display: flex;
-    justify-content: flex-end;
     margin-left: auto;
     margin-right: 200px;
 }
 
-button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    letter-spacing: 2.5px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #4285f4;
-    border: none;
+.resume-btn {
     border-radius: 5px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.102);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    margin: 30px;
-}
-
-button:hover {
-    transform: scale(1.1);
 }
 
 .job-post-section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 10px;
 }
 
 .job-post-conatiner {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: center;
-    gap: 10px;
     border: 1px solid rgb(83, 83, 83);
     width: 70%;
     margin-bottom: 50px;
 }
 
 .job-list{
-    padding: 10px 40px;
+    padding: 20px 40px;
     border-bottom:1px solid rgb(84, 84, 84);
     align-self: stretch;
     justify-self: center;
@@ -141,93 +53,3 @@ button:hover {
     color: rgb(81, 81, 234);
     font-weight: 600;
 }
-
-
-
- /* FORM SECTION */
-
- .form-section{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
- form{
-    max-width: fit-content;
-    max-height: 450px;
-    padding: 15px;
-    box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
- }
-
- .input-section {
-    display: flex;
-    flex-direction: column;
- }
-
- input[type="text"],
- input[type="email"],
- select,
- textarea {
-   font: 1.25rem / 1.5 sans-serif;
-   display: block;
-   width: 100%;
-   padding: 0.12em 0.12em;
- }
-
- label {
-    padding: 6px;
- }
-
- .submit-section{
-    max-width: fit-content;
-}
-
-.submit-section button {
-    margin: 10px;
-}
-
-.close-form{
-    background-color: red;
-}
-
-/* ---FOOTER---- */
-
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(33, 33, 33, 0.92);
-    color: white;
-    padding: 30px 0;
-}
-
-.footer-nav-bar-links ul {
-    line-height: 2;
-    padding: 24px;
-    font-weight: 600;
-    margin-left: 60px;
-}
-
-.footer-nav-bar-links ul li a {
-    color: white;
-}
-
-.footer-contact {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    row-gap: 10px;
-}
-
-.footer-contact p {
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 8px;
-}
-
-.contact-links a {
-    color: white;
-    padding-right: 10px;
-}
-
