--- a/styles/style.css
+++ b/styles/style.css
@@ -1,89 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;
-    max-width: 100vw;
-}
-
-.container {
-    max-width: 100vw;
-    min-height: 100vh;
-}
-
-button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    letter-spacing: 2.5px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #4285f4;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.102);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    margin: 10px;
-}
-
-button:hover {
-    transform: scale(1.1);
-}
-
-.nav-bar {
-    position: sticky;
-    /* or absolute */
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: white;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
-}
-
-.logo img {
-    max-width: 160px;
-    max-height: auto;
-}
-
-.nav-bar-ul li {
-    display: inline-block;
-    padding: 18px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 40px;
-    color: black;
-}
-
-.nav-bar-ul li :hover {
-    padding: 10px;
-    border-top: 5px solid #4285f4;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-/* .nav-bar-links {
-    display: grid;
-    grid-template-columns: 1fr;
-} */
-
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* padding: 10px; */
-    /* margin: 20px; */
-}
-
 
 .home-container {
     display: flex;
@@ -304,42 +218,16 @@ a {
 }
 
 
-/* ---FOOTER---- */
+@media (max-width: 800px) {
+    .services-grid {
+        display: block;
+    }
 
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(33, 33, 33, 0.92);
-    color: white;
-    padding: 30px 0;
-}
+    .card {
+        margin-bottom: 30px;
+    }
 
-.footer-nav-bar-links ul {
-    line-height: 2;
-    padding: 24px;
-    font-weight: 600;
-}
-
-.footer-nav-bar-links ul li a {
-    color: white;
-}
-
-.footer-contact {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    row-gap: 10px;
-}
-
-.footer-contact p {
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 8px;
-}
-
-.contact-links a {
-    color: white;
-    padding-right: 10px;
+    .slider-grid {
+        display: block;
+    }
 }
